--- a/app/views/highlights/show.html.haml
+++ b/app/views/highlights/show.html.haml
@@ -1,7 +1,10 @@
-- @title = @highlight.moment_title
+- @title = @moment.moment_title
 
 - content_for :sidebar do
-  = render partial: "moments/activity_sidebar", locals: {moment: @highlight}
+  = render partial: "moments/activity_sidebar", locals: {moment: @moment}
 
-%article.social-detail
-  = render partial: "moments/highlight", locals: {moment: @highlight, comments_displayed: true, detail_view: true}
+%article.social-detail{"data-moment-id" => @moment.id}
+  :javascript
+    $(document).ready(function(){
+      var feed = new Moments.DetailView();
+    });
