--- a/app/views/moments/show.html.haml
+++ b/app/views/moments/show.html.haml
@@ -1,8 +1,10 @@
+- @title = @moment.moment_title
+
 - content_for :sidebar do
   = render partial: "moments/activity_sidebar", locals: {moment: @moment}
 
 %article.social-detail{"data-moment-id" => @moment.id}
   :javascript
     $(document).ready(function(){
-      var feed = new Moments.DetailView({el: '.social-detail'});
+      var feed = new Moments.DetailView();
     });
