--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -1,8 +1,10 @@
-- @title = bookmark_title(@bookmark)
+- @title = bookmark_title(@moment)
 
 - content_for :sidebar do
-  = render partial: "moments/activity_sidebar", locals: {moment: @bookmark}
-  
+  = render partial: "moments/activity_sidebar", locals: {moment: @moment}
 
-%article.social-detail
-  = render partial: "moments/bookmark", locals: {moment: @bookmark, comments_displayed: true, detail_view: true}
+%article.social-detail{"data-moment-id" => @moment.id}
+  :javascript
+    $(document).ready(function(){
+      var feed = new Moments.DetailView();
+    });
