--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -1,7 +1,10 @@
-- @title = @note.title
+- @title = @moment.moment_title
 
 - content_for :sidebar do
-  = render partial: "moments/activity_sidebar", locals: {moment: @note} if current_user.interact_with? @note
+  = render partial: "moments/activity_sidebar", locals: {moment: @moment}
 
-%article.social-detail
-  = render partial: "moments/note", locals: {moment: @note, comments_displayed: true, detail_view: true}
+%article.social-detail{"data-moment-id" => @moment.id}
+  :javascript
+    $(document).ready(function(){
+      var feed = new Moments.DetailView();
+    });
