Fixed blank slate

--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -350,6 +350,9 @@
 
 #main
 
+  .profile-blank-slate
+    display: none
+
   .slate-activity,
   .slate-bookmarks,
   .slate-highlights,
@@ -383,10 +386,12 @@
     background: #fff image-url("icon-notes-64.png") no-repeat center 40px
 
   .slate-badges
+    display: block
     background: #fff image-url("icon-badge-64.png") no-repeat center 40px
 
   .slate-friends
     background: #fff image-url("icon-group-64.png") no-repeat center 40px
+    display: block
 
   .slate-activity
     background: #fff image-url("icon-activity-64.png") no-repeat center 40px
