Fixed progress bar in RP moments. YV-1529

--- a/app/assets/stylesheets/mobile/_progress_bars.sass
+++ b/app/assets/stylesheets/mobile/_progress_bars.sass
@@ -26,16 +26,14 @@
 .progress_counter
   text-align: center
   width: 180px
-  height: 39px
-  line-height: 38px
   position: absolute
-  top: 20px
+  top: 4px
   font-size: 12px
-  right: 0
+  right: -60px
 
 .progress_bar_outer
   background-color: #f9f9f9
-  margin-right: 180px
+  margin-right: 20%
   overflow: hidden
   position: relative
 
