Fixed the my plans page which I broke with previous commit. YV-1529

--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -22,30 +22,33 @@
 .resource_list
   .subscription
     overflow: hidden
-    
-    h3
-      margin-left: 10px
-      margin-bottom: .5em
-      overflow: auto
+
+    .subscription-info
       position: relative
 
-      .subscription-title
-        display: block
-        float: left
-        width: 70%
+    h3
+      margin-left: 10px
+      overflow: hidden
+      position: relative
 
-      .subscription-privacy
-        font-size: 12px
-        font-weight: normal
-        position: absolute
-        bottom: 0px
-        right: 10px
-        width: 29%
-        text-align: right
-        
-        a
-          color: #aaa
-          text-decoration: underline
+    .subscription-title
+      display: block
+      float: left
+      width: 70%
+
+    .subscription-privacy
+      font-size: 12px
+      font-weight: normal
+      position: absolute
+      bottom: -3px
+      right: 10px
+      width: 29%
+      text-align: right
+      display: block
+
+      a
+        color: #aaa
+        text-decoration: underline
 
     .progress_wrap
       margin-bottom: 0
