--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -22,24 +22,25 @@
 .resource_list
   .subscription
     overflow: hidden
+    padding: 15px 0
 
     h3
-      margin-left: 10px
-      margin-bottom: .5em
-      overflow: auto
+      margin-bottom: 0
+      overflow: hidden
       position: relative
 
-      .subscription-title
-        display: block
+    .subscription-title
+      display: block
 
-      .subscription-privacy
-        font-size: 12px
-        font-weight: normal
-        text-align: right
+    .subscription-privacy
+      font-size: 12px
+      font-weight: normal
+      display: block
+      margin: 5px 0 10px
 
-        a
-          color: #aaa
-          text-decoration: underline
+      a
+        color: #aaa
+        text-decoration: underline
 
     .progress_wrap
       margin-bottom: 0
