--- a/app/assets/stylesheets/mobile/_progress_bars.sass
+++ b/app/assets/stylesheets/mobile/_progress_bars.sass
@@ -25,15 +25,14 @@
 
 .progress_counter
   text-align: center
-  width: 180px
   position: absolute
   top: 4px
   font-size: 12px
-  right: -60px
+  right: 20px
 
 .progress_bar_outer
   background-color: #f9f9f9
-  margin-right: 20%
+  margin-right: 35%
   overflow: hidden
   position: relative
 
@@ -105,3 +104,14 @@
 
 .widget .progress_bar_shadow
   right: 106px
+
+
+// Social feed overrides
+
+.moment-rp
+  .progress_counter
+    top: 4px
+    right: 20px
+
+  .progress_bar_outer
+    margin-right: 20%
