Add Friend on Friendship Moments
#time 6h YV-1295

--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -237,7 +237,7 @@ input[type="submit"]:active,
 input[type="reset"]:active,
 button.active
   +box-shadow(inset rgba(#000, 0.5) 0 1px 3px 0)
-  color: #eee
+  color: #005d8d
 
 textarea,
 select,
@@ -362,10 +362,6 @@ input[type="submit"].action_button_green,
 input[type="submit"].action_button_blue,
 input[type="submit"].action_button_red,
 input[type="submit"].action_button_grey,
-input[type="button"].action_button_green,
-input[type="button"].action_button_blue,
-input[type="button"].action_button_red,
-input[type="button"].action_button_grey,
 button.action_button_blue,
 button.action_button_green,
 button.action_button_red,
@@ -373,11 +369,7 @@ button.action_button_grey,
 .action_button_blue,
 .action_button_green,
 .action_button_red,
-.action_button_grey,
-a.action_button_blue,
-a.action_button_green,
-a.action_button_red,
-a.action_button_grey
+.action_button_grey
   +border-radius(5px)
   display: inline-block
   font:
@@ -388,29 +380,6 @@ a.action_button_grey
   padding: 7px 20px
   +box-shadow(inset rgba(0,0,0, 0.20) 0 -2px 0 0)
   background-image: none
-
-input[type="submit"].action_button_green:active,
-input[type="submit"].action_button_blue:active,
-input[type="submit"].action_button_red:active,
-input[type="submit"].action_button_grey:active,
-input[type="button"].action_button_green:active,
-input[type="button"].action_button_blue:active,
-input[type="button"].action_button_red:active,
-input[type="button"].action_button_grey:active,
-button.action_button_blue:active,
-button.action_button_green:active,
-button.action_button_red:active,
-button.action_button_grey:active,
-.action_button_blue:active,
-.action_button_green:active,
-.action_button_red:active,
-.action_button_grey:active,
-a.action_button_blue:active,
-a.action_button_green:active,
-a.action_button_red:active,
-a.action_button_grey:active
-  +box-shadow(inset rgba(0,0,0, 0.20) 0 2px 0 0)
-  color: #eee
 
 
 input[type="submit"].action_button_green,
@@ -431,23 +400,32 @@ input[type="submit"].action_button_grey,
 
 // Green Action Buttons
 
-
 input[type="submit"].action_button_green,
-input[type="button"].action_button_green,
-.action_button_green,
-button.action_button_green
+button.action_button_green,
+.action_button_green
   background-color: #48A900
   background-image: none
 
-input[type="submit"].action_button_green:hover,
-input[type="submit"].action_button_green:focus,
-input[type="button"].action_button_green:hover,
-input[type="button"].action_button_green:focus,
 .action_button_green:hover,
 .action_button_green:focus,
-button.action_button_green:hover,
-button.action_button_green:focus
+.action_button_green:active,
+input[type="submit"].action_button_green:hover,
+input[type="submit"].action_button_green:focus,
+input[type="submit"].action_button_green:active
   background-color: #4FBA00
+
+input[type="submit"].action_button_green:focus,
+input[type="submit"].action_button_green:active,
+.action_button_green:focus,
+.action_button_green:active
+  color: #4FBA00
+
+input[type="submit"].action_button_green,
+.action_button_green,
+.action_button_green:hover,
+.action_button_green:focus,
+.action_button_green:active
+  border: 0
 
 
 // Blue Action Buttons
@@ -457,80 +435,101 @@ input[type="button"].action_button_blue,
 .action_button_blue,
 a.action_button_blue
   background-color: #0099CC
-  border: none
+  border: 0
 
 input[type="submit"].action_button_blue:hover,
 input[type="submit"].action_button_blue:focus,
+input[type="submit"].action_button_blue:active,
 input[type="button"].action_button_blue:hover,
 input[type="button"].action_button_blue:focus,
+input[type="button"].action_button_blue:active,
 .action_button_blue:hover,
 .action_button_blue:focus,
-a.action_button_blue:hover,
-a.action_button_blue:focus
+.action_button_blue:active
   background-color: #0F7BB0
+
+
+input[type="submit"].action_button_blue:focus,
+input[type="submit"].action_button_blue:active,
+input[type="button"].action_button_blue:focus,
+input[type="button"].action_button_blue:active,
+.action_button_blue:focus,
+.action_button_blue:active
+  color: #87abbe
 
 
 // Red Action Button
 
 input[type="submit"].action_button_red,
-input[type="button"].action_button_red,
 button.action_button_red,
 a.action_button_red,
 .action_button_red
   background-color: #CC0000
   background-image: none
-  border: none
+  border: 0
 
 .action_button_red:hover,
 .action_button_red:focus,
-a.action_button_red:hover,
-a.action_button_red:focus,
+.action_button_red:active,
 input[type="submit"].action_button_red:hover,
 input[type="submit"].action_button_red:focus,
-input[type="button"].action_button_red:hover,
-input[type="button"].action_button_red:focus
+input[type="submit"].action_button_red:active
   background-image: none
   background-color: #B30F0A
+
+input[type="submit"].action_button_red:focus,
+input[type="submit"].action_button_red:active,
+.action_button_red:focus,
+.action_button_red:active
+  color: #ae8787
 
 
 // Grey Action Buttons
 
 input[type="submit"].action_button_grey,
-input[type="button"].action_button_grey,
 button.action_button_grey,
-a.action_button_grey,
 .action_button_grey
   background-color: #e6e6e6
   background-image: none
-  border: none
+  color: #424242 !important
 
 .action_button_grey:hover,
 .action_button_grey:focus,
-a.action_button_grey:hover,
-a.action_button_grey:focus,
+.action_button_grey:active,
 input[type="submit"].action_button_grey:hover,
 input[type="submit"].action_button_grey:focus,
-input[type="button"].action_button_grey:hover,
-input[type="button"].action_button_grey:focus
-  background-image: none
-  background-color: #ddd
+input[type="submit"].action_button_grey:active
+  background-color: #cfcfcf
+
+input[type="submit"].action_button_grey:focus,
+input[type="submit"].action_button_grey:active,
+.action_button_grey:focus,
+.action_button_grey:active
+  color: #424242
+
+input[type="submit"].action_button_grey,
+.action_button_grey,
+.action_button_grey:hover,
+.action_button_grey:focus,
+.action_button_grey:active
+  border: 0
 
 
 // Small action buttons
 
 .sm_action_button_blue,
-.sm_action_button_green
-  +border-radius(16px)
-  +box-shadow(inset rgba(#fff, 0.3) 0 1px 0 0, #fff 0 1px 0 0, #eeedeb 0 0 0 4px)
-  border: 1px solid #666
+.sm_action_button_green,
+.sm_action_button_grey
+  +border-radius(5px)
   display: inline-block
   font:
-    size: 10px
+    size: 12px
     weight: bold
-  line-height: 1.3
+  line-height: 1.3em
   text-align: center
-  text-shadow: rgba(#000, 0.5) 0 1px 0
-  padding: 3px 10px
+  padding: 4px 8px
+  +box-shadow(inset rgba(0,0,0, 0.20) 0 -2px 0 0)
+  background-image: none
 
 .sm_action_button_blue,
 .sm_action_button_green,
@@ -540,46 +539,30 @@ input[type="button"].action_button_grey:focus
   text-decoration: none
 
 .sm_action_button_green
-  background-color: #81a950
+  background-color: #48A900
 
 .sm_action_button_green:hover,
 .sm_action_button_green:focus,
 .sm_action_button_green:active
-  background-color: #5d832f
-
-.sm_action_button_green:focus,
-.sm_action_button_green:active
-  color: #9cae87
-
-.sm_action_button_green,
-.sm_action_button_green:hover,
-.sm_action_button_green:focus,
-.sm_action_button_green:active
-  border-color: #607346
+  background-color: #4FBA00
 
 .sm_action_button_blue
-  background-color: #0077b4
+  background-color: #0099CC
 
 .sm_action_button_blue:hover,
 .sm_action_button_blue:focus,
 .sm_action_button_blue:active
-  background-color: #006091
+  background-color: #0F7BB0
 
-.sm_action_button_blue:focus,
-.sm_action_button_blue:active
-  color: #87abbe
+.sm_action_button_grey
+  background-color: #E5E5E5
+  color: #444
 
-.sm_action_button_blue,
-.sm_action_button_blue:hover,
-.sm_action_button_blue:active,
-.sm_action_button_blue:focus
-  border-color: #0077b4
-
-.sm_action_button_green:focus,
-.sm_action_button_green:active,
-.sm_action_button_blue:focus,
-.sm_action_button_blue:active
-  +box-shadow(#fff 0 1px 0 0, #eeedeb 0 0 0 5px, inset rgba(#000, 0.5) 0 5px 10px 0)
+.sm_action_button_grey:hover,
+.sm_action_button_grey:focus,
+.sm_action_button_grey:active
+  background-color: #D0D0D0
+  color: #444
 
 //
 // Icons inside buttons:
