--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -413,7 +413,7 @@ body.transition .moment
 
 .moment-verse-wrap
   clear: both
-  max-height: 250px
+  max-height: 256px
   overflow: hidden
   position: relative
   padding-bottom: 25px
@@ -716,7 +716,7 @@ body.transition .moment
   display: none
 
 .moment-fr-box
-  display: inline-block
+  display: block
 
 .moment-fr-avatar
   box-shadow: 0 1px 2px #bbb
@@ -728,17 +728,26 @@ body.transition .moment
 
 .moment-fr-name
   display: inline-block
+  vertical-align: top
   padding: 5px 8px 7px
   line-height: 1.2em
   letter-spacing: -.02em
   font:
     size: 1.6em
     weight: normal
-
+ 
 .moment-fr-seemore
   display: block
   text-align: center
 
+.moment-fr-form
+  display: inline-block
+  margin-left: 10px
+
+.moment-fr-name-add
+  position: absolute
+  top: 115px
+  left: 215px
 
 // !Bookmark moment
 
