--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -537,18 +537,18 @@ input[type="submit"].action_button_grey,
 // Small action buttons
 
 .sm_action_button_blue,
-.sm_action_button_green
-  +border-radius(16px)
-  +box-shadow(inset rgba(#fff, 0.3) 0 1px 0 0, #fff 0 1px 0 0, #eeedeb 0 0 0 4px)
-  border: 1px solid #666
-  display: inline-block
+.sm_action_button_green,
+.sm_action_button_grey
+  +border-radius(5px)
+  display: block
   font:
-    size: 10px
+    size: 13px
     weight: bold
-  line-height: 1.3
+  line-height: 1.3em
   text-align: center
-  text-shadow: rgba(#000, 0.5) 0 1px 0
-  padding: 3px 10px
+  padding: 8px
+  +box-shadow(inset rgba(0,0,0, 0.20) 0 -2px 0 0)
+  background-image: none
 
 .sm_action_button_blue,
 .sm_action_button_green,
@@ -558,46 +558,30 @@ input[type="submit"].action_button_grey,
   text-decoration: none
 
 .sm_action_button_green
-  background-color: #81a950
+  background-color: #48A900
 
 .sm_action_button_green:hover,
 .sm_action_button_green:focus,
 .sm_action_button_green:active
-  background-color: #5d832f
-
-.sm_action_button_green:focus,
-.sm_action_button_green:active
-  color: #9cae87
-
-.sm_action_button_green,
-.sm_action_button_green:hover,
-.sm_action_button_green:focus,
-.sm_action_button_green:active
-  border-color: #607346
+  background-color: #4FBA00
 
 .sm_action_button_blue
-  background-color: #0077b4
+  background-color: #0099CC
 
 .sm_action_button_blue:hover,
 .sm_action_button_blue:focus,
 .sm_action_button_blue:active
-  background-color: #006091
+  background-color: #0F7BB0
 
-.sm_action_button_blue:focus,
-.sm_action_button_blue:active
-  color: #87abbe
+.sm_action_button_grey
+  background-color: #E5E5E5
+  color: #444
 
-.sm_action_button_blue,
-.sm_action_button_blue:hover,
-.sm_action_button_blue:active,
-.sm_action_button_blue:focus
-  border-color: #0077b4
-
-.sm_action_button_green:focus,
-.sm_action_button_green:active,
-.sm_action_button_blue:focus,
-.sm_action_button_blue:active
-  +box-shadow(#fff 0 1px 0 0, #eeedeb 0 0 0 5px, inset rgba(#000, 0.5) 0 5px 10px 0)
+.sm_action_button_grey:hover,
+.sm_action_button_grey:focus,
+.sm_action_button_grey:active
+  background-color: #D0D0D0
+  color: #444
 
 //
 // Icons inside buttons:
