--- a/app/views/connections/_tabs.html.haml
+++ b/app/views/connections/_tabs.html.haml
@@ -11,7 +11,7 @@
 
 #connection_info
 
-  - if @user.connections[@show]
+  - if @user.connections.present? && @user.connections[@show]
     %p
       = t('social.connected as', connection: connection_name, username: @user.connections[@show].nickname)
       %span.confirm
