--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -98,6 +98,7 @@ body.transition .moment
 
       a
         display: block
+        color: #56CBFF
 
     li:last-child
       border: none
@@ -857,6 +858,7 @@ input[type="submit"].moment-fr-name-add
     padding: 15px
     border: 1px solid #e1e1e1
     border-bottom: 0
+    position: relative
 
     a
       font-weight: normal
@@ -873,6 +875,49 @@ input[type="submit"].moment-fr-name-add
         border-bottom: 1px dashed #e1e1e1
         background-color: #e1e1e1
         padding: 10px 15px
+
+  .moment-rp-layer
+    position: absolute
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    z-index: 4
+    +opacity(0.66)
+    background-color: #000
+
+  .moment-plan-start
+    background-color: #fff
+    width: 76%
+    margin: 0 12%
+    position: absolute
+    left: 0
+    top: 35px
+    z-index: 5
+
+  .plan-privacy-buttons
+    display: block
+    padding: 15px
+
+    .detail-text
+      font-size: 14px !important
+
+    .button-wrap
+      @extend .clearfix
+
+    .button-public
+      font-weight: bold
+      color: #fff
+
+    .button-private
+      font-weight: bold
+
+    .button-plan-cancel
+      font-weight: bold
+      color: #0084c8
+      text-align: center
+      display: block
+      margin-top: 10px
 
 // !Group moment
 
