Fixed the styling for the add friend button in feed

--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -519,7 +519,10 @@ input[type="submit"].action_button_grey,
 
 .sm_action_button_blue,
 .sm_action_button_green,
-.sm_action_button_grey
+.sm_action_button_grey,
+input.sm_action_button_blue,
+input.sm_action_button_green,
+input.sm_action_button_grey
   +border-radius(5px)
   display: inline-block
   font:
@@ -534,33 +537,49 @@ input[type="submit"].action_button_grey,
 .sm_action_button_blue,
 .sm_action_button_green,
 .sm_action_button_blue:hover,
-.sm_action_button_green:hover
+.sm_action_button_green:hover,
+input.sm_action_button_blue,
+input.sm_action_button_green,
+input.sm_action_button_blue:hover,
+input.sm_action_button_green:hover
   color: #fff
   text-decoration: none
 
-.sm_action_button_green
+.sm_action_button_green,
+input.sm_action_button_green
   background-color: #48A900
 
 .sm_action_button_green:hover,
 .sm_action_button_green:focus,
-.sm_action_button_green:active
+.sm_action_button_green:active,
+input.sm_action_button_green:hover,
+input.sm_action_button_green:focus,
+input.sm_action_button_green:active
   background-color: #4FBA00
 
-.sm_action_button_blue
+.sm_action_button_blue,
+input.sm_action_button_blue
   background-color: #0099CC
 
 .sm_action_button_blue:hover,
 .sm_action_button_blue:focus,
-.sm_action_button_blue:active
+.sm_action_button_blue:active,
+input.sm_action_button_blue:hover,
+input.sm_action_button_blue:focus,
+input.sm_action_button_blue:active
   background-color: #0F7BB0
 
-.sm_action_button_grey
+.sm_action_button_grey,
+input.sm_action_button_grey
   background-color: #E5E5E5
   color: #444
 
 .sm_action_button_grey:hover,
 .sm_action_button_grey:focus,
-.sm_action_button_grey:active
+.sm_action_button_grey:active,
+input.sm_action_button_grey:hover,
+input.sm_action_button_grey:focus,
+input.sm_action_button_grey:active
   background-color: #D0D0D0
   color: #444
 
