Fix annoying highlight

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -734,13 +734,15 @@ body.transition .moment
 .moment-fr-name
   display: block
   padding: 5px 8px 7px
-  line-height: 1.2em
-  letter-spacing: -0.02em
-  font-size: 1.6em
-  font-weight: normal
   position: absolute
   top: 10px
   left: 155px
+  a
+    line-height: 1.2em
+    letter-spacing: -0.02em
+    font-size: 1.6em
+    font-weight: normal
+
 
 .moment-fr-seemore
   display: block
