--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -770,11 +770,12 @@ body.transition .moment
   display: inline-block
   vertical-align: top
   padding: 5px 8px 7px
-  line-height: 1.2em
-  letter-spacing: -.02em
-  font:
-    size: 1.6em
-    weight: normal
+  a
+    line-height: 1.2em
+    letter-spacing: -.02em
+    font:
+      size: 1.6em
+      weight: normal
     
 .moment-fr-seemore
   display: block
