--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -758,6 +758,9 @@ body.transition .moment
     position: relative
     display: block
 
+.moment-fr-center
+  position: relative
+
 .moment-fr-avatar
   box-shadow: 0 1px 2px #bbb
   +border-radius(80px)
@@ -767,16 +770,18 @@ body.transition .moment
   border: 4px solid #fff
 
 .moment-fr-name
-  display: inline-block
-  vertical-align: top
-  padding: 5px 8px 7px
+  display: block
+  position: absolute
+  top: 10px
+  left: 120px
+
   a
     line-height: 1.2em
     letter-spacing: -.02em
     font:
       size: 1.6em
       weight: normal
-    
+
 .moment-fr-seemore
   display: block
   text-align: center
@@ -785,11 +790,13 @@ body.transition .moment
   display: inline-block
   margin-left: 10px
 
-.moment-fr-name-add
+input[type="submit"].moment-fr-name-add
   position: absolute
-  top: 115px
-  left: 215px
-  
+  top: 45px
+  left: 121px
+  width: auto
+  padding: 8px 15px 10px
+
 // !Bookmark moment
 
 .moment-bm
