--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -754,12 +754,12 @@ body.transition .moment
 .moment-fr-box
   clear: both
   position: relative
-  a:first-child
-    position: relative
-    display: block
 
 .moment-fr-center
-  position: relative
+  display: table
+
+.moment-fr-center + a
+  display: table-cell
 
 .moment-fr-avatar
   box-shadow: 0 1px 2px #bbb
@@ -769,32 +769,26 @@ body.transition .moment
   margin: 0 0 0 20px
   border: 4px solid #fff
 
+.moment-fr-details
+  display: table-cell
+  vertical-align: middle
+
 .moment-fr-name
   display: block
-  position: absolute
-  top: 10px
-  left: 120px
-
-  a
-    line-height: 1.2em
-    letter-spacing: -.02em
-    font:
-      size: 1.6em
-      weight: normal
+  line-height: 1.2em
+  letter-spacing: -0.02em
+  font-size: 1.6em
+  font-weight: normal
+  margin: 0 0 5px 15px
 
 .moment-fr-seemore
   display: block
   text-align: center
 
 .moment-fr-form
-  display: inline-block
-  margin-left: 10px
+  margin: 0 0 0 15px
 
 input[type="submit"].moment-fr-name-add
-  position: absolute
-  top: 45px
-  left: 121px
-  width: auto
   padding: 8px 15px 10px
 
 // !Bookmark moment
