share ui slide out for facebook and twitter links

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -76,6 +76,13 @@ body.transition .moment
     +border-radius(5px)
     +box-shadow(1px 1px 5px #777)
 
+    .share-action-link span:before
+      float: right
+      content: '\25B6'
+
+    .share-action-link.open span:before
+      content: '' //\25B2
+
     .arrow-down
       position: absolute
       right: 10px
@@ -86,6 +93,8 @@ body.transition .moment
       border-right: 8px solid transparent
       border-top: 10px solid #3c3c3c
 
+    .moment-share-layer li
+      min-width: 75px
 
     li
       padding: 0 10px
