Remove partner notification settings

--- a/app/views/notifications/edit.html.haml
+++ b/app/views/notifications/edit.html.haml
@@ -6,8 +6,7 @@
     "friendships"   => t('users.notifications.friendships'),
     "reading_plans" => t('users.notifications.reading_plans'),
     "badges"        => t('users.notifications.badges'),
-    "newsletter"    => t('users.notifications.newsletter'),
-    "partners"      => t('users.notifications.publishing partners')
+    "newsletter"    => t('users.notifications.newsletter')
   }
 
   @title = t('users.edit notifications')
