Styled small action buttons

--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -502,10 +502,7 @@ button.action_button_grey:active,
 
 .sm_action_button_blue,
 .sm_action_button_green,
-.sm_action_button_grey,
-input.sm_action_button_blue,
-input.sm_action_button_green,
-input.sm_action_button_grey
+.sm_action_button_grey
   +border-radius(5px)
   display: inline-block
   font:
@@ -520,51 +517,49 @@ input.sm_action_button_grey
 .sm_action_button_blue,
 .sm_action_button_green,
 .sm_action_button_blue:hover,
-.sm_action_button_green:hover,
-input.sm_action_button_blue,
-input.sm_action_button_green,
-input.sm_action_button_blue:hover,
-input.sm_action_button_green:hover
+.sm_action_button_green:hover
   color: #fff
   text-decoration: none
 
-.sm_action_button_green,
-input.sm_action_button_green
+// Small green action buttons
+
+.sm_action_button_green
   background-color: #48A900
 
 .sm_action_button_green:hover,
-.sm_action_button_green:focus,
-.sm_action_button_green:active,
-input.sm_action_button_green:hover,
-input.sm_action_button_green:focus,
-input.sm_action_button_green:active
+.sm_action_button_green:focus
   background-color: #4FBA00
 
-.sm_action_button_blue,
-input.sm_action_button_blue
+.sm_action_button_green:active
+  background-color: #3D9000
+
+
+// Small blue action buttons
+
+.sm_action_button_blue
   background-color: #0099CC
 
 .sm_action_button_blue:hover,
-.sm_action_button_blue:focus,
-.sm_action_button_blue:active,
-input.sm_action_button_blue:hover,
-input.sm_action_button_blue:focus,
-input.sm_action_button_blue:active
+.sm_action_button_blue:focus
+  background-color: #00A3D9
+
+.sm_action_button_blue:active
   background-color: #0F7BB0
 
-.sm_action_button_grey,
-input.sm_action_button_grey
-  background-color: #E5E5E5
+
+// Small grey action buttons
+
+.sm_action_button_grey
+  background-color: #e6e6e6
   color: #444
 
 .sm_action_button_grey:hover,
-.sm_action_button_grey:focus,
-.sm_action_button_grey:active,
-input.sm_action_button_grey:hover,
-input.sm_action_button_grey:focus,
-input.sm_action_button_grey:active
-  background-color: #D0D0D0
-  color: #444
+.sm_action_button_grey:focus
+  background-color: #eee
+
+.sm_action_button_grey:active
+  background-color: #cfcfcf
+
 
 //
 // Icons inside buttons:
